update from perrick's feedback

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Dr.Code</title>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600' rel='stylesheet' type='text/css'>
+    <script src="https://use.fontawesome.com/19e66f2a2c.js"></script>
     <link rel="stylesheet" href="css/atome.css"> 
     <link rel="stylesheet" href="css/default.css"> 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
@@ -40,7 +41,7 @@
       <div class="bg-black white py2" >
 	<div class="container sm-w8">
 	  <div class="align-right h6 gray">
-	    <span class="btn btn-outline">Call the Doctor</span> <span class="btn"><a href="mailto:hello@drcode.io">hello@drcode.io</a></span>
+	    <span class="btn">Ask the Doctor</span> <span class="btn btn-outline"><a href="mailto:hello@drcode.io">hello@drcode.io</a></span>
 	  </div>
 	  <div class="h1 py2" style="height:2.5em;">
 	    <span class="red">When</span> you need <br> 
@@ -58,16 +59,16 @@
 
 
     <section>
-      <div class="bg-silver  black py3">
+      <div class="bg-silver black py3">
 	<div class="container lg-w8">
 
 	  <div class="h3 py2">
 	    <strong><span class="red">Verbaliser un problème </span> c'est déjà en partie <span class="green">le résoudre.</span> </strong><br>
-	    <b>Dr.Code </b>vous aide à établir un <span class="blue">diagnostic rapide</span> sur vos difficultés liées à au code.
+	    <b>Dr.Code </b>établit un <span class="blue">diagnostic rapide</span> et propose des <span class="green">solutions pragmatiques</span> pour tout problème de développement logiciel.
 	  </div>
 
 	  <div class="muted h5"> 
-	    <p>architectes, administrateurs systèmes, concepteurs, analystes métiers, managers, chefs de projets, scrummasters, coachs, product owners... </p>
+	    <p>architectes, administrateurs systèmes, concepteurs, analystes métiers, managers, chefs de projets, scrummasters, coachs, product owners&hellip; </p>
 	  </div>
 
 	  <div class="clearfix mxn2 border-top border-bottom">
@@ -77,13 +78,14 @@
 	 	<li class="inline"><span class="blue">&bull;</span> Un diagnostic permettant d'enclencher un processus d'amélioration</li>
 	 	<li class="inline"><span class="blue">&bull;</span> Une approche holistique de la résolution de problèmes liant code, produit et organisation</li>
 	 	<li class="inline"><span class="blue">&bull;</span> Un regard critique et bienveillant appuyé sur 20 ans d'expérience</li>
+	 	<li class="inline"><span class="blue">&bull;</span> Des solutions co-construites, concrètes et actionnables</li>
 	 	<li class="inline"><span class="blue">&bull;</span> Une maïeutique</li>
 	      </ul>
 	    </div>
 	    <div class="col px2 sm-w4 h5">
 	      <h4 class="">Dr.Code <span class="red">n'est pas</span></h4>
 	      <ul class="list-reset h5">
-	 	<li class="inline"><span class="red">x</span> Un service de consultant payé à la journée</li>
+	 	<li class="inline"><span class="red">x</span> Un service de consultant &laquo;classique&raquo; payé à la journée ou forfaitaire</li>
 	 	<li class="inline"><span class="red">x</span> Une boîte à outils de solutions toutes faites</li>
 	 	<li class="inline"><span class="red">x</span> Une expertise spécialisée sur telle ou telle technologie.</li>
 	      </ul>
@@ -97,25 +99,26 @@
       <div id="sticky" class="w10 bg-white py2 green border-top border-bottom border-green">
 	<div class="container align-center">
 	  <div class="h5">
-	    <span class="btn btn-outline">Call the Doctor</span>
-	    <span class="h6"><span class="btn"><a href="mailto:hello@drcode.io">hello@drcode.io</a></span></span>
+	    <span class="btn">Ask the Doctor</span>
+	    <span class="h6"><span class="btn btn-outline"><a href="mailto:hello@drcode.io">hello@drcode.io</a></span></span>
 	  </div>
 	</div> 
       </div>
     </section>
 
     <section>
-      <div class="bg-white">
+      <div class="bg-darken-1">
 	<div class="row m0">
 	  <div class="cell w6 sm-w4 mr1 align-bottom">
 	    <span><img src="images/arnaud_hero.png" alt="" class="align-bottom"></span>
 	  </div>
 	  <div class="cell sm-w6 p2 align-middle">
-	    <h3 class="m0"><span class="green">Docteur...</span> <span class="blue">Qui ?</span></h3>
+	    <h3 class="m0"><span class="green">Docteur&hellip;</span> <span class="blue">Qui ?</span></h3>
 	    <h1 class="m0">Arnaud Bailly</h1>
-	    <p>Mon premier ordinateur était un <a href="http://oldcomputers.net/zx81.html">ZX81</a> mais je suis payé pour développer des logiciels depuis 1994.</p>
-	    <p>J'ai fait de la recherche, été consultant en ESL, formateur et enseignant, coach agile, architecte, développeur, CTO de startups...</p>
-            <p>Je code régulièrement en Java, C, Haskell, Clojure et comprend la plupart des langages en usage courant</p>
+	    <p>Son premier ordinateur était un <a href="http://oldcomputers.net/zx81.html">ZX81</a> mais il est payé pour développer des logiciels depuis 1994.</p>
+	    <p>Il a fait de la recherche, été consultant en ESL, formateur et enseignant, coach agile, architecte, développeur, CTO de startups&hellip;</p>
+            <p>Il code régulièrement en Java, C, Haskell, Clojure et comprend la plupart des langages en usage courant</p>
+            <p>Il est docteur &hellip; en informatique</p>
 	    <p class="h5"><span class="btn btn-outline"><a href="https://www.linkedin.com/in/arnaudbailly/">work</a></span> <span class="btn btn-outline"><a href="https://abailly.github.io">blog</a></span>  <span class="btn btn-outline"><a href="https://speakerdeck.com/abailly">talks</a></span>  <span class="btn btn-outline"><a href="https://github.com/abailly">code</a></span> <span class="btn btn-outline"><a href="https://twitter.com/dr_c0d3">tweets</a></span></p>
 	  </div>
 	</div>
@@ -123,25 +126,25 @@
     </section>
 
     <section>
-      <div class="bg-darken-1 py4">
+      <div class="bg-white py3">
+        <div class="container lg-w8">
 	<div class="row">
-          <div class="cell p2 sm-w7">
-	    <h3 class="m0"><span class="green">Docteur...</span> <span class="red">Comment ?</span></h3>
-            <ol>
-	      <li>Je prends <a href="https://calendly.com/dr-code">rendez-vous</a> pour une consultation à <a href="http://appear.in">distance</a></li>
-              <li>J'expose mon problème et explore des solutions lors de la consultation</li>
-	      <li>Je paye en fonction du <a href="#tarif">temps passé</a> sur <a href="https://paypal.me/arnaudbailly">PayPal</a></li>
-              <li>À l'issue de la séance, je reçois un compte-rendu écrit et une note d'honoraires</li>
+          <div class="cell p2">
+	    <h3 class="m0"><span class="green">Docteur&hellip;</span> <span class="red">Comment ?</span></h3>
+            <ol class="list-reset">
+	      <li class="py1"> <span class="mr2 fa fa-calendar fa-3x"></span><span class="inline-block sm-w8 align-top">Je prends <a href="https://calendly.com/dr-code">rendez-vous</a> pour une consultation</span></li>
+              <li class="py1"><span class="mr2 fa fa-video-camera fa-3x"></span><span class="inline-block sm-w8 align-top">J'expose mon problème et explore des solutions lors de la consultation qui se déroule habituellement <a href="http://appear.in">à distance</a></span></li>
+	      <li class="py1"><span class="mr2 fa fa-money fa-3x"></span><span class="inline-block sm-w8 align-top">À l'issue de la séance, je paye en fonction du <a href="#tarif">temps passé</a> au moyen <a href="https://paypal.me/arnaudbailly">PayPal</a></span></li>
+              <li class="py1"><span class="mr2 fa fa-file-text-o fa-3x"></span><span class="inline-block sm-w8 align-top">Après la consultation, je reçois un compte-rendu écrit et une note d'honoraires</span></li>
 	    </ol>
           </div>
-          <div class="cell p1 sm-w3">
-          </div>
+        </div>
         </div>
       </div>
     </section>
-
+    
     <section>
-      <div class="bg-darken-2 py1">
+      <div class="bg-darken-2 py3">
 	<div class="container">
 	  <div class="row">
 	    <div class="cell p1 sm-w3">
@@ -159,11 +162,11 @@
 	 	</li>
 	 	<li class="border-top ">
 	 	  <h4 class="mb0">Est-ce que la consultation peut se faire en face-à-face?</h4>
-	 	  <p>Oui, si c'est possible, raisonnable et utile de le faire</p>
+	 	  <p>Oui, si c'est possible, raisonnable et utile de le faire.</p>
 	 	</li>
 	 	<li class="border-top ">
-	 	  <h4 class="mb0">Je voudrais faire participer des collègues ou collaborateurs à la consultation, est-ce possible?</h4>
-	 	  <p>Non. Dr.Code aide à résoudre vos problèmes en établissant une relation personnelle de confiance et d'ouverture qui fonctionne moins bien en groupe</p>
+	 	  <h4 class="mb0">Et si mon problème demande plus de temps?</h4>
+	 	  <p>Selon les résultats de la première consultation, d'autres modalités d'intervention peuvent être programmées: <a href="http://www.extremeprogramming.org/rules/pair.html">pair-programming</a>, <a href="http://codingdojo.org/">dojo de programmation</a>, <a href="http://openspaceworld.org/wp2/">ateliers open-space</a>, recherche &amp; développement&hellip;</p>
 	 	</li>
 	 	<li class="border-top ">
 	 	  <h4 class="mb0">Est-ce remboursé par la sécurité sociale ?</h4>
@@ -180,7 +183,7 @@
     </section>
 
     <section>
-      <div class="bg-darken-3 py1">
+      <div class="bg-darken-3 py3">
 	<div class="container">
 	  <div class="row">
 	    <div class="cell p1 sm-w3">
@@ -201,7 +204,7 @@
                   <p><i>Jeff Abrahamson, Data Scientist, <a href="http://www.jellybooks.com">Jellybooks</a></i></p>
                 </li>
                 <li class="border-top ">
-	 	  <p>&laquo;Un quart d'heure d'échange a suffi pour m'offrir des solutions actionnables à un problème de tests de performances&raquo;</p>
+	 	  <p>&laquo;Un &frac14; d'heure d'échange a suffi pour m'offrir des réponses actionnables à mes questions sur des tests de performances&raquo;</p>
 	 	  <p><i>Bernard Notarianni, Developer, <a href="http://barrel-db.org">Barrel</a></i></p>
 	 	</li>
 	      </ul>		
