update colors to match spring 2017 pantone

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 	    <span class="btn">Ask the Doctor</span> <span class="btn btn-outline"><a href="mailto:hello@drcode.io">hello@drcode.io</a></span>
 	  </div>
 	  <div class="h1 py2" style="height:2.5em;">
-	    <span class="red">When</span> you need <br> 
+	    <span class="flame">When</span> you need <br> 
 	    <span id="typed">
-	      <span class="green">to cure</span> <span class="blue">your code.</span>
+	      <span class="greenery">to cure</span> <span class="lapis-blue">your code.</span>
 	    </span>
 	  </div>
 	  <div class="py2 align-right serif-sans">
@@ -59,12 +59,12 @@
 
 
     <section>
-      <div class="bg-silver black py3">
+      <div class="bg-pale-dogwood black py3">
 	<div class="container lg-w8">
 
 	  <div class="h3 py2">
-	    <strong><span class="red">Verbaliser un problème </span> c'est déjà en partie <span class="green">le résoudre.</span> </strong><br>
-	    <b>Dr.Code </b>établit un <span class="blue">diagnostic rapide</span> et propose des <span class="green">solutions pragmatiques</span> pour tout problème de développement logiciel.
+	    <strong><span class="flame">Verbaliser un problème </span> c'est déjà en partie <span class="greenery">le résoudre.</span> </strong><br>
+	    <b>Dr.Code </b>établit un <span class="lapis-blue">diagnostic rapide</span> et propose des <span class="greenery">solutions pragmatiques</span> pour tout problème de développement logiciel.
 	  </div>
 
 	  <div class="muted h5"> 
@@ -73,21 +73,21 @@
 
 	  <div class="clearfix mxn2 border-top border-bottom">
 	    <div class="col px2 sm-w6">
-	      <h4>Dr.Code <span class="blue">c'est</span></h4>
+	      <h4>Dr.Code <span class="lapis-blue">c'est</span></h4>
 	      <ul class="list-reset h5">
-	 	<li class="inline"><span class="blue">&bull;</span> Un diagnostic permettant d'enclencher un processus d'amélioration</li>
-	 	<li class="inline"><span class="blue">&bull;</span> Une approche holistique de la résolution de problèmes liant code, produit et organisation</li>
-	 	<li class="inline"><span class="blue">&bull;</span> Un regard critique et bienveillant appuyé sur 20 ans d'expérience</li>
-	 	<li class="inline"><span class="blue">&bull;</span> Des solutions co-construites, concrètes et actionnables</li>
-	 	<li class="inline"><span class="blue">&bull;</span> Une maïeutique</li>
+	 	<li class="inline"><span class="lapis-blue">&bull;</span> Un diagnostic permettant d'enclencher un processus d'amélioration</li>
+	 	<li class="inline"><span class="lapis-blue">&bull;</span> Une approche holistique de la résolution de problèmes liant code, produit et organisation</li>
+	 	<li class="inline"><span class="lapis-blue">&bull;</span> Un regard critique et bienveillant appuyé sur 20 ans d'expérience</li>
+	 	<li class="inline"><span class="lapis-blue">&bull;</span> Des solutions co-construites, concrètes et actionnables</li>
+	 	<li class="inline"><span class="lapis-blue">&bull;</span> Une maïeutique</li>
 	      </ul>
 	    </div>
 	    <div class="col px2 sm-w4 h5">
-	      <h4 class="">Dr.Code <span class="red">n'est pas</span></h4>
+	      <h4 class="">Dr.Code <span class="flame">n'est pas</span></h4>
 	      <ul class="list-reset h5">
-	 	<li class="inline"><span class="red">x</span> Un service de consultant &laquo;classique&raquo; payé à la journée ou forfaitaire</li>
-	 	<li class="inline"><span class="red">x</span> Une boîte à outils de solutions toutes faites</li>
-	 	<li class="inline"><span class="red">x</span> Une expertise spécialisée sur telle ou telle technologie.</li>
+	 	<li class="inline"><span class="flame">x</span> Un service de consultant &laquo;classique&raquo; payé à la journée ou forfaitaire</li>
+	 	<li class="inline"><span class="flame">x</span> Une boîte à outils de solutions toutes faites</li>
+	 	<li class="inline"><span class="flame">x</span> Une expertise spécialisée sur telle ou telle technologie.</li>
 	      </ul>
 	    </div>
 	  </div>
@@ -96,7 +96,7 @@
 
     
     <section id="sticky_anchor">
-      <div id="sticky" class="w10 bg-white py2 green border-top border-bottom border-green">
+      <div id="sticky" class="w10 bg-white py2 greenery border-top border-bottom border-green">
 	<div class="container align-center">
 	  <div class="h5">
 	    <span class="btn">Ask the Doctor</span>
@@ -107,19 +107,19 @@
     </section>
 
     <section>
-      <div class="bg-darken-1">
+      <div class="bg-hazelnut">
 	<div class="row m0">
 	  <div class="cell w6 sm-w4 mr1 align-bottom">
 	    <span><img src="images/arnaud_hero.png" alt="" class="align-bottom"></span>
 	  </div>
 	  <div class="cell sm-w6 p2 align-middle">
-	    <h3 class="m0"><span class="green">Docteur&hellip;</span> <span class="blue">Qui ?</span></h3>
+	    <h3 class="m0"><span class="greenery">Docteur&hellip;</span> <span class="lapis-blue">Qui ?</span></h3>
 	    <h1 class="m0">Arnaud Bailly</h1>
 	    <p>Son premier ordinateur était un <a href="http://oldcomputers.net/zx81.html">ZX81</a> mais il est payé pour développer des logiciels depuis 1994.</p>
 	    <p>Il a fait de la recherche, été consultant en ESL, formateur et enseignant, coach agile, architecte, développeur, CTO de startups&hellip;</p>
             <p>Il code régulièrement en Java, C, Haskell, Clojure et comprend la plupart des langages en usage courant</p>
             <p>Il est docteur &hellip; en informatique</p>
-	    <p class="h5"><span class="btn btn-outline"><a href="https://www.linkedin.com/in/arnaudbailly/">work</a></span> <span class="btn btn-outline"><a href="https://abailly.github.io">blog</a></span>  <span class="btn btn-outline"><a href="https://speakerdeck.com/abailly">talks</a></span>  <span class="btn btn-outline"><a href="https://github.com/abailly">code</a></span> <span class="btn btn-outline"><a href="https://twitter.com/dr_c0d3">tweets</a></span></p>
+	    <p class="h5 lapis-blue"><span class="btn btn-outline"><a href="https://www.linkedin.com/in/arnaudbailly/">work</a></span> <span class="btn btn-outline"><a href="https://abailly.github.io">blog</a></span>  <span class="btn btn-outline"><a href="https://speakerdeck.com/abailly">talks</a></span>  <span class="btn btn-outline"><a href="https://github.com/abailly">code</a></span> <span class="btn btn-outline"><a href="https://twitter.com/dr_c0d3">tweets</a></span></p>
 	  </div>
 	</div>
       </div>
@@ -130,7 +130,7 @@
         <div class="container lg-w8">
 	<div class="row">
           <div class="cell p2">
-	    <h3 class="m0"><span class="green">Docteur&hellip;</span> <span class="red">Comment ?</span></h3>
+	    <h3 class="m0"><span class="greenery">Docteur&hellip;</span> <span class="flame">Comment ?</span></h3>
             <ol class="list-reset">
 	      <li class="py1"> <span class="mr2 fa fa-calendar fa-3x"></span><span class="inline-block sm-w8 align-top">Je prends <a href="https://calendly.com/dr-code">rendez-vous</a> pour une consultation</span></li>
               <li class="py1"><span class="mr2 fa fa-video-camera fa-3x"></span><span class="inline-block sm-w8 align-top">J'expose mon problème et explore des solutions lors de la consultation qui se déroule habituellement <a href="http://appear.in">à distance</a></span></li>
@@ -144,11 +144,11 @@
     </section>
     
     <section>
-      <div class="bg-darken-2 py3">
+      <div class="bg-pale-dogwood py3">
 	<div class="container">
 	  <div class="row">
 	    <div class="cell p1 sm-w3">
-	      <h2 class="px2 align-right" id="tarif">Faq</h2>
+	      <h2 class="px2 lapis-blue align-right" id="tarif">Faq</h2>
 	    </div>
 	    <div class="cell p1 sm-w7 h5">
 	      <ul class="list-reset">
@@ -183,11 +183,11 @@
     </section>
 
     <section>
-      <div class="bg-darken-3 py3">
+      <div class="bg-hazelnut py3">
 	<div class="container">
 	  <div class="row">
 	    <div class="cell p1 sm-w3">
-	      <h2 class="px2 align-right">Témoignages</h2>
+	      <h2 class="px2 lapis-blue align-right">Témoignages</h2>
 	    </div>
 	    <div class="cell p1 sm-w7 h5">
 	      <ul class="list-reset">
@@ -225,7 +225,7 @@
     <script>
       $(function(){
       $("#typed").typed({
-      strings: ['<span class="green">to cure</span> <span class="blue">your code.</span>','<span class="green"> agile </span> <span class="blue">development.</span>'],
+      strings: ['<span class="greenery">to cure</span> <span class="lapis-blue">your code.</span>','<span class="greenery"> agile </span> <span class="lapis-blue">development.</span>'],
       typeSpeed: 20,
       showCursor: true,
       loop: true
