--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 	    <div class="col px2 sm-w4 h5">
 	      <h4 class="">Dr.Code <span class="red">n'est pas</span></h4>
 	      <ul class="list-reset h5">
-	 	<li class="inline"><span class="red">x</span> Un service de consultant &laquo;classique&raquo; payé à la journée ou forfaitaire</li>
 	 	<li class="inline"><span class="red">x</span> Une boîte à outils de solutions toutes faites</li>
+	 	<li class="inline"><span class="red">x</span> Une entreprise de service numérique</li>
 	 	<li class="inline"><span class="red">x</span> Une expertise spécialisée sur telle ou telle technologie.</li>
 	      </ul>
 	    </div>
@@ -96,7 +96,7 @@
 
     
     <section id="sticky_anchor">
-      <div id="sticky" class="w10 bg-white py2 green border-top border-bottom border-green">
+      <div id="sticky" class="w10 bg-white py2 border-top border-bottom">
 	<div class="container align-center">
 	  <div class="h5">
 	    <span class="btn">Ask the Doctor</span>
@@ -113,12 +113,12 @@
 	    <span><img src="images/arnaud_hero.png" alt="" class="align-bottom"></span>
 	  </div>
 	  <div class="cell sm-w6 p2 align-middle">
-	    <h3 class="m0"><span class="green">Docteur&hellip;</span> <span class="blue">Qui ?</span></h3>
+	    <h3 class="m0"><span>Docteur&hellip;</span> <span class="blue">Qui ?</span></h3>
 	    <h1 class="m0">Arnaud Bailly</h1>
-	    <p>Son premier ordinateur était un <a href="http://oldcomputers.net/zx81.html">ZX81</a> mais il est payé pour développer des logiciels depuis 1994.</p>
-	    <p>Il a fait de la recherche, été consultant en ESL, formateur et enseignant, coach agile, architecte, développeur, CTO de startups&hellip;</p>
-            <p>Il code régulièrement en Java, C, Haskell, Clojure et comprend la plupart des langages en usage courant</p>
-            <p>Il est docteur &hellip; en informatique</p>
+            <p>Il est docteur en informatique</p>
+	    <p>Il a fait de la recherche, été consultant en entreprise de service numérique, formateur et enseignant, coach agile, architecte, développeur, CTO de startups&hellip;</p>
+            <p>Il code régulièrement en Java, C, Haskell, Clojure, Javascript et comprend la plupart des langages en usage courant</p>
+            <p>Il a travaillé sur du code patrimonial comprenant plusieurs dizaines de millions de lignes aussi bien que des projets neufs</p>
 	    <p class="h5"><span class="btn btn-outline"><a href="https://www.linkedin.com/in/arnaudbailly/">work</a></span> <span class="btn btn-outline"><a href="https://abailly.github.io">blog</a></span>  <span class="btn btn-outline"><a href="https://speakerdeck.com/abailly">talks</a></span>  <span class="btn btn-outline"><a href="https://github.com/abailly">code</a></span> <span class="btn btn-outline"><a href="https://twitter.com/dr_c0d3">tweets</a></span></p>
 	  </div>
 	</div>
@@ -130,12 +130,12 @@
         <div class="container lg-w8">
 	<div class="row">
           <div class="cell p2">
-	    <h3 class="m0"><span class="green">Docteur&hellip;</span> <span class="red">Comment ?</span></h3>
+	    <h3 class="m0"><span>Docteur&hellip;</span> <span class="red">Comment ?</span></h3>
             <ol class="list-reset">
-	      <li class="py1"> <span class="mr2 fa fa-calendar fa-3x"></span><span class="inline-block sm-w8 align-top">Je prends <a href="https://calendly.com/dr-code">rendez-vous</a> pour une consultation</span></li>
-              <li class="py1"><span class="mr2 fa fa-video-camera fa-3x"></span><span class="inline-block sm-w8 align-top">J'expose mon problème et explore des solutions lors de la consultation qui se déroule habituellement <a href="http://appear.in">à distance</a></span></li>
-	      <li class="py1"><span class="mr2 fa fa-money fa-3x"></span><span class="inline-block sm-w8 align-top">À l'issue de la séance, je paye en fonction du <a href="#tarif">temps passé</a> au moyen <a href="https://paypal.me/arnaudbailly">PayPal</a></span></li>
-              <li class="py1"><span class="mr2 fa fa-file-text-o fa-3x"></span><span class="inline-block sm-w8 align-top">Après la consultation, je reçois un compte-rendu écrit et une note d'honoraires</span></li>
+	      <li class="py1"><span class="how-icon fa fa-calendar"></span><span class="inline-block sm-w8 align-top">Je prends <a href="https://calendly.com/dr-code">rendez-vous</a> pour une consultation</span></li>
+              <li class="py1"><span class="how-icon fa fa-video-camera"></span><span class="inline-block sm-w8 align-top">J'expose mon problème et explore des solutions lors de la consultation qui se déroule habituellement <a href="http://appear.in">à distance</a></span></li>
+	      <li class="py1"><span class="how-icon fa fa-money"></span><span class="inline-block sm-w8 align-top">À l'issue de la séance, je paye en fonction du <a href="#tarif">temps passé</a></span></li>
+              <li class="py1"><span class="how-icon fa fa-file-text-o"></span><span class="inline-block sm-w8 align-top">Après la consultation, je reçois un compte-rendu écrit et une note d'honoraires</span></li>
 	    </ol>
           </div>
         </div>
@@ -157,12 +157,12 @@
 	 	  <p>€100/h.</p>
 	 	</li>
 	 	<li class="border-top ">
-	 	  <h4 class="mb0">Can we do consultation in English?</h4>
+	 	  <h4 class="mb0">Can we consult in English?</h4>
 	 	  <p>Yes, we can!</p>
 	 	</li>
 	 	<li class="border-top ">
-	 	  <h4 class="mb0">Est-ce que la consultation peut se faire en face-à-face?</h4>
-	 	  <p>Oui, si c'est possible, raisonnable et utile de le faire.</p>
+	 	  <h4 class="mb0">Où à lieu la consultation ?</h4>
+	 	  <p>Auprès de l'équipe qui développe le code, au cabinet de Dr.Code ou <a href="http://appear.in">à distance</a> selon les circonstances.</p>
 	 	</li>
 	 	<li class="border-top ">
 	 	  <h4 class="mb0">Et si mon problème demande plus de temps?</h4>
