ajout commentaire, alignement, reference these

--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
 <!DOCTYPE html>
+<!-- 
+     Si vous lisez ceci c'est probablement que vous êtes un développeur, quelqu'un qui attache de l'importance au code
+     et à la manière dont les choses sont faites, qui cherche à savoir ce qu'une personne qui se présente comme Dr.Code 
+     est capable de produire en termes de code. 
+
+     Je crains que vous ne soyiez déçu-e : la qualité du code de cette page est loin d'être optimale et j'en suis 
+     conscient : la CSS ne découple pas du tout la structure de sa représentation (les classes ne sont que des références 
+     vers des propriétés spécifiques, complètement transparentes), le code utilise jquery (certes minifié) et un plugin
+     pour l'effet machine à écrire trop complexe
+-->
 <html lang="en">
   <head>
     <meta charset="UTF-8">
@@ -115,7 +125,7 @@
 	  <div class="cell sm-w6 p2 align-middle">
 	    <h3 class="m0"><span>Docteur&hellip;</span> <span class="blue">Qui ?</span></h3>
 	    <h1 class="m0">Arnaud Bailly</h1>
-            <p>Il est docteur en informatique</p>
+            <p>&hellip; est <a href="https://www.theses.fr/2005LIL10096">docteur en informatique</a> de l'Université de Lille</p>
 	    <p>Il a fait de la recherche, été consultant en entreprise de service numérique, formateur et enseignant, coach agile, architecte, développeur, CTO de startups&hellip;</p>
             <p>Il code régulièrement en Java, C, Haskell, Clojure, Javascript et comprend la plupart des langages en usage courant</p>
             <p>Il a travaillé sur du code patrimonial comprenant plusieurs dizaines de millions de lignes aussi bien que des projets neufs</p>
@@ -132,10 +142,10 @@
           <div class="cell p2">
 	    <h3 class="m0"><span>Docteur&hellip;</span> <span class="red">Comment ?</span></h3>
             <ol class="list-reset">
-	      <li class="py1"><span class="how-icon fa fa-calendar"></span><span class="inline-block sm-w8 align-top">Je prends <a href="https://calendly.com/dr-code">rendez-vous</a> pour une consultation</span></li>
-              <li class="py1"><span class="how-icon fa fa-video-camera"></span><span class="inline-block sm-w8 align-top">J'expose mon problème et explore des solutions lors de la consultation qui se déroule habituellement <a href="http://appear.in">à distance</a></span></li>
-	      <li class="py1"><span class="how-icon fa fa-money"></span><span class="inline-block sm-w8 align-top">À l'issue de la séance, je paye en fonction du <a href="#tarif">temps passé</a></span></li>
-              <li class="py1"><span class="how-icon fa fa-file-text-o"></span><span class="inline-block sm-w8 align-top">Après la consultation, je reçois un compte-rendu écrit et une note d'honoraires</span></li>
+	      <li class="py1"><span class="how-icon fa align-middle fa-calendar"></span><span class="inline-block sm-w8 align-middle">Je prends <a href="https://calendly.com/dr-code">rendez-vous</a> pour une consultation</span></li>
+              <li class="py1"><span class="how-icon fa align-middle fa-video-camera"></span><span class="inline-block sm-w8 align-middle">J'expose mon problème et explore des solutions lors de la consultation qui se déroule habituellement <a href="http://appear.in">à distance</a></span></li>
+	      <li class="py1"><span class="how-icon fa align-middle fa-money"></span><span class="inline-block sm-w8 align-middle">À l'issue de la séance, je paye en fonction du <a href="#tarif">temps passé</a></span></li>
+              <li class="py1"><span class="how-icon fa align-middle fa-file-text-o"></span><span class="inline-block sm-w8 align-middle">Après la consultation, je reçois un compte-rendu écrit et une note d'honoraires</span></li>
 	    </ol>
           </div>
         </div>
